# ezOutletTray

./: .gitignore  README.md
src/: CMakeLists.txt  ezOutletTray.pro  main.cpp  settingsdialog.cpp  settingsdialog.h  traycontroller.cpp  traycontroller.h
